Cannot switch between Slots of Render Result #80776

Closed
opened 2020-09-14 17:01:16 +02:00 by Simon Thommes · 8 comments
Member

System Information
Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-14 07:59, hash: 14b0f20374
Worked: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10

Short description of error
After rendering multiple images in different slots I am unable to switch between the different images. All slots display the latest rendering.

Exact steps for others to reproduce the error
From startup scene:

  • hit F12
  • change to a different slot
  • visibly change something in the scene
  • hit F12 again
  • go back to the previous render slot
  • only the latest render is displayed in both used slots
**System Information** Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-14 07:59, hash: `14b0f20374` Worked: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-10 **Short description of error** After rendering multiple images in different slots I am unable to switch between the different images. All slots display the latest rendering. **Exact steps for others to reproduce the error** From startup scene: - hit F12 - change to a different slot - visibly change something in the scene - hit F12 again - go back to the previous render slot - only the latest render is displayed in both used slots
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

#80788 was marked as duplicate of this issue

#80788 was marked as duplicate of this issue
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2020-09-14 17:11:57 +02:00
Member

Thanks for the report. Yes, that is one D8234 introduced

Thanks for the report. Yes, that is one [D8234](https://archive.blender.org/developer/D8234) introduced
Robert Guetzkow changed title from Connot switch between Slots of Render Result to Cannot switch between Slots of Render Result 2020-09-14 18:08:59 +02:00
Member

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by ac58663dec

This issue was referenced by ac58663decabb25600862e7345377efe2da1ee92
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80776
No description provided.