Fix T80776: Cannot switch between Slots of Render Result

Introduced by D8234. Added active render slot to determine if the GPUTexture is still up to date.