source/blender/makesdna/DNA_image_types.h
@@ -151,7 +151,8 @@ typedef struct Image {
   short gpuflag;
   short gpu_pass;
   short gpu_layer;
-  char _pad2[6];
+  short gpu_slot;
+  char _pad2[4];
 
   /** Deprecated. */
   struct PackedFile *packedfile DNA_DEPRECATED;
